# rust-lab

axum-web/: Cargo.toml  Makefile  docker-compose.yaml  go.mod  go.sum  schema.sql
axum-web/src/: main.rs  record.rs
axum-web/tools/: tools.go
first-touch/: Cargo.toml
guessing-game/src/: main.rs
rusty-gql/: Cargo.toml
rusty-gql/schema/: organization.graphql
rusty-gql/src/: main.rs
rusty-gql/src/graphql/input/: get_by_name_input.rs  mod.rs
rusty-gql/src/graphql/mutation/: mod.rs
rusty-gql/src/graphql/query/: get_by_name.rs  mod.rs
rusty-gql/src/graphql/resolver/: mod.rs  organization.rs
time-web/: Cargo.toml
time-web/src/: handler.rs  main.rs
time-web/src/handler/: healthcheck.rs  time.rs
