[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = '0.6.12'}
tokio = {version = '1.26.0', features = ["macros","rt-multi-thread"]}
serde = {version = '1.0.158', features = ["derive"]}
serde_json = {version = '1.0.94'}
sqlx = { version = "0.6.3", features = ["postgres","runtime-tokio-native-tls"] }
