[package]
name = "rusty-gql"
version = "0.1.2"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
axum = {version = "0.4.2", features = ["headers"]}
hyper = "0.14.16"
rusty-gql = "0.1.0"
rusty-gql-axum = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
